# reqres_copy

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py
app/api/: __init__.py  api.py
app/api/endpoints/: users.py
app/core/: config.py  exceptions.py  middleware.py
app/models/: __init__.py  user.py
tests/: conftest.py  user_test.py
